--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "casippel.github.io",
   "version": "0.1.0",
+  "homepage": "https://casippel.github.io",
   "private": true,
   "dependencies": {
     "@babel/core": "^7.16.0",
@@ -59,6 +60,8 @@
     "workbox-webpack-plugin": "^6.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
@@ -136,5 +139,8 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
