--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.1.1",
+    "react-responsive": "^10.0.0"
   }
 }
