--- a/src/jsconfig.json
+++ b/src/jsconfig.json
@@ -2,8 +2,8 @@
     "compilerOptions": {
       "baseUrl": ".",
       "paths": {
-        "@components/*": ["./src/components/*"],
-        "@lib/*": ["./src/lib/*"]
+        "@components/*": ["./components/*"],
+        "@lib/*": ["./lib/*"]
       }
     },
     "include": ["."]
